kustomize/kustomize-practice/eg5.1/nextjs-myapp.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nextjs-3000
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs-myapp-service
  namespace: nextjs-3000
spec:
  # type: ClusterIP
  selector:
    app: nextjs-myapp
  ports:
    - protocol: TCP
      port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-myapp
  namespace: nextjs-3000
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs-myapp
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextjs-myapp
    spec:
      containers:
      - name: nextjs-myapp
        image: chagchagchag/nextjs-app-ts:v0.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            protocol: TCP
        # resources:
        #   limits:
        #     memory: "512Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: 3000
