kustomize/kustomize-practice/eg5.1/nextjs-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-ingress
  namespace: nextjs-myapp
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nextjs-myapp-service
            port:
              number: 3000
